add the intro section

--- a/src/components/NavBar/Header.css
+++ b/src/components/NavBar/Header.css
@@ -2,7 +2,7 @@ nav {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	background-color: white;
+	background-color: rgb(203, 232, 240);
 	padding: 10px 80px;
 	color:rgb(21, 54, 23); 
 }
@@ -24,13 +24,13 @@ nav {
 	font-weight: 600;
 	font-size: 1.3rem;
 	transition: 0.1s ease-in-out;
-	color: rgb(21, 54, 23);
+	color: #0d0d32;
 	cursor: pointer;
 }
 
 #navbar li a:hover{
-	border-bottom: 3px solid rgb(80, 206, 89); 
-	color: rgb(80, 206, 89);
+	border-bottom: 3px solid #3c3c79; 
+	color: #3c3c79;
 } 
 
 .logo {
@@ -59,13 +59,14 @@ h2 {
 		top: 70px;
 		right: -300px;
 		width: 300px;
-		height: 40rem;
-		background-color: white;
+		height: 100%;
+		background-color: rgb(203, 232, 240);
 		padding: 40px 0 0 10px
 	}
 
 	#navbar.active {
 		right: 0px;
+		z-index: 3; 
 	}
 
 	#navbar li {
