--- a/src/components/NavBar/Header.css
+++ b/src/components/NavBar/Header.css
@@ -5,6 +5,8 @@ nav {
 	background-color: rgb(203, 232, 240);
 	padding: 10px 80px;
 	color:rgb(21, 54, 23); 
+	position: sticky;
+	top: 0;
 }
 
 #navbar {
