--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -27,8 +27,8 @@
 }
 
 .introPara {
-    font-size: medium;
-    font-weight: 100;
+    font-size: 1.5rem;
+    font-weight: 200;
 }
 
 .introContent {
