--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -21,6 +21,7 @@
     font-size: 3rem;
     font-weight: 600;
     margin-bottom: 0.5rem;
+    margin-top: 1rem;
 }
 
 .contactDesc {
@@ -67,13 +68,7 @@
         text-align: center;
         margin: 0 auto;
     }
-
-    .contactTitle {
-        font-size: 2rem;
-        font-weight: 500;
-        margin-bottom: 0.5rem;
-    }
-    
+  
     .contactForm{
         width: 90vw;
         max-width: 80rem;
